auth-server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.6.1
          args: ["start"]
          ports:
            - name: http
              containerPort: 8080
            - name: jgroups
              containerPort: 7800
            - name: jgroups-fd
              containerPort: 57800
            - name: health
              containerPort: 9000
          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
            periodSeconds: 60
            failureThreshold: 600            
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            periodSeconds: 60
            failureThreshold: 3            
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            periodSeconds: 60
            failureThreshold: 3            
          resources:
            limits:
              cpu: 2000m
              memory: 2000Mi
            requests:
              cpu: 500m
              memory: 1700Mi
