auth-server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-auth-keycloak
  labels:
    app: keycloak
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  selector:
    app: keycloak
  type: ClusterIP
