auth-server/k8s/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-route-auth-keycloak
spec:
  parentRefs:
    - name: gateway-shared
  hostnames:
    - "api.javarush.dev"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /auth
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: ""
      backendRefs:
      - name: service-auth-keycloak
        port: 8080
